# link-shortener-rust

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fly.toml
.sqlx/: query-278aae2dec8760306373ce373facd9c971988d8c802207941031db813f1ae22e.json  query-4c11d642674b8ae74a20e7e9b226a2c5ea573992f593ab0cd76526d8c65ccdd3.json  query-5cbc28dcd23f3c2a3f51ea08737560b8c7e98452f07e27d7bb36920a2a6249ab.json  query-e2adaa7c09041c10a26b4fe7059add50d5fe33f3bbd4d162afb6c378c9de3b19.json  query-e76c2170989dd3b59250b6dbc6b807f0a1bbc0106ed0ceda407eaa726b82696a.json  query-f3aa62a1c8376bd0270489cbcd139aba8232419e2d1dcd0220b3f90dfd590781.json
configuration/: local.yaml  production.yaml
migrations/: 20240604194646_links.sql  20240605003448_link_statistics.sql  20240605021229_settings.sql
src/: lib.rs  main.rs  settings.rs  startup.rs  state.rs
src/api/: mod.rs  utils.rs  v1.rs
src/api/handlers/: auth.rs  mod.rs  redirect.rs  statistics.rs
src/models/: link.rs  mod.rs  statistic.rs
src/repository/: auth.rs  link.rs  mod.rs  statistics.rs
src/services/: generate_id.rs  mod.rs
