[package]
name = "link_shortener"
version = "0.1.0"
edition = "2021"

[dependencies]

anyhow = "1.0.83"
config = "0.14"
dotenv = "0.15"
serde = { version = "1.0.202", features = ["derive"] }
axum = "0.7.5"
tokio = { version = "1.37", features = ["full"] }
arc-swap = "1.7"
tracing = { version = "0.1.40", features = ["log"] }
tracing-log = { version = "0.2" }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tower-http = { version = "0.5.2", features = ["trace"] }
chrono = {  version = "0.4.38", features = ["serde"] }
axum-macros = "0.4.1"
jsonwebtoken = "9.3"
argon2 = "0.5.3"
password-hash = { version = "0.5", features = ["getrandom"] }
sqlx = { version = "0.7.4", features = [ "postgres", "runtime-tokio-native-tls", "tls-rustls", "chrono","bigdecimal" ] }
metrics = "0.23.0"
metrics-exporter-prometheus = "0.15.0"
axum-prometheus = "0.6.1"
tower = "0.4.13"
url = "2.5.0"
base64 = "0.22.1"
rand = "0.8.5"
sha3 = "0.10.8"

